--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.23.1",
     "sqlite3": "^5.1.7",
     "styled-components": "^6.1.13"
@@ -58,19 +59,19 @@
     "webpack-cli": "^5.1.4"
   },
   "config": {
-  "forge": {
-    "packagerConfig": {
-      "arch": "ia32",
-      "platform": "win32"
-    },
-    "makers": [
-      {
-        "name": "@electron-forge/maker-squirrel",
-        "config": {
-          "setupIcon": "./path/to/icon.ico"
+    "forge": {
+      "packagerConfig": {
+        "arch": "ia32",
+        "platform": "win32"
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "setupIcon": "./path/to/icon.ico"
+          }
         }
-      }
-    ]
+      ]
+    }
   }
-}
 }
